fixed horizontal scroll

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,6 +20,4 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    overflow: auto;
-
 }
